# TraceAgent

./: .gitignore  README.md  pyproject.toml
src/: app.py  main.py  version.py
src/analysis/: __init__.py  attribution.py  timeline.py
src/analysis/ntfs/: attribution.py  carver.py  events.py  signatures.py
src/collection/: __init__.py  artifact_collector.py  base.py  bootstrap.py  registry.py  service_catalog.py
src/collection/ntfs/: collector.py
src/core/: __init__.py  models.py
src/parsers/: __init__.py  _cache_utils.py  antigravity.py  base.py  bootstrap.py  chatgpt.py  claude_code.py  claude_common.py  claude_cowork.py  codex.py  registry.py
src/parsers/ntfs/: logfile.py  mft.py  usn.py
src/reporting/: __init__.py  exporters.py  parsed_writer.py
src/storage/: __init__.py  database.py
src/ui/: __init__.py  main_window.py  theme.py
src/utils/: __init__.py  case_paths.py  chromium_cache.py  chromium_indexeddb.py  chromium_localstorage.py  evidence_access.py  structured_data.py
