[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "traceagent"
version = "1.0.260704"
description = "Compact collection, parsing, and analysis UI for AI agent forensic artifacts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.8,<7",
    "brotli>=1.1,<2",
    "ccl_chromium_reader @ git+https://github.com/cclgroupltd/ccl_chromium_reader.git@b51a01c913799f5af2735f964d4627275369e90e",
    "dissect.target>=3.25,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
]

[project.scripts]
traceagent = "app:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["app", "version"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
